# event-planner

./: .gitignore  Cargo.toml  README.md  settings.json
src/: event.rs  main.rs
