[package]
name = "event-planner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poise = "0.6.1"
serenity = "0.12"
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
dotenv="0.15.0"
iso8601-timestamp = "0.2.17"
chrono = "0.4.38"
